# template_with_auth

./: Cookiecutter_version.txt  cookiecutter.json
{{cookiecutter.project_slug}}/: .env  .gitignore  Dockerfile  README.md  compose_stack.yml  docker-compose-develop.yml  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/app/: database.py  main.py
{{cookiecutter.project_slug}}/app/api/: deps.py
{{cookiecutter.project_slug}}/app/api/v1/routers/: auth.py
{{cookiecutter.project_slug}}/app/core/: config.py
{{cookiecutter.project_slug}}/app/services/: user.py
{{cookiecutter.project_slug}}/migrations/: env.py
{{cookiecutter.project_slug}}/migrations/versions/: 46ea49359b8a_initial.py
